# bts_digital-test-task

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  r4s.postman_collection.json  requirements_dev.txt  setup.cfg
.github/workflows/: django.yml
R4C/: __init__.py  settings.py  urls.py
business/: __init__.py  email_sender.py  queue.py  test.py
customers/: factories.py  models.py
customers/management/commands/: create_customer.py  create_random_customers.py
orders/: schemas.py  tests.py  urls.py  views.py
orders/business/: main.py  models.py  tests.py
robots/: factories.py  schemas.py  tests.py  urls.py  views.py
robots/business/: main.py  models.py  queries.py  statistics.py  tests.py  xlsx.py
robots/management/commands/: create_random_robots.py
